chore(i18n): move armor items to content.json

--- a/locales/fr/contrib.json
+++ b/locales/fr/contrib.json
@@ -41,7 +41,7 @@
     "hideAds": "Cacher les publicités",
     "gamemaster": "Maître du Jeu",
     "backerTier": "Palier de Souteneur",
-    "balance": "Balance",
+    "balance": "Solde",
     "tierPop": "Cliquez sur les paliers pour les détails.",
     "playerTiers": "Paliers de joueur",
     "visitHeroes": "Visitez le Panthéon des Héros (contributeurs et souteneurs)",
